--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,31 @@
-
+    // **background colors**
 $bg-white:white;
 $bg-light-grey: #F6F6F6;
 $bg-grey :#EAEAEA;
 $bg-dark-grey: #353535;
+
+    // **components colors**
 
 $dot-color:#9356DC;
 
 $icon-color:#999999;
 
 $color-dark-grey: rgb(86, 86, 86);
+
+// **text colors **
+
+$typo-main-color: black;
+$typo-secdry-color: white;
+$typo-tertry-color:#353535;
+$typo-quatry-color: #008766;
+
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
+
+$gradient-prim-color: #E872DA;
+$gradient-sec-color: #A55DDC;
+
+// ** shadows colors**
+ $shadow: rgb(194, 194, 194);
+
