--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,263 +1,18 @@
 
 @import "./base/typography";
-@import"./utils/variables";
-@import"./utils/mixins";
- 
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./layout/header";
+@import "./base/base";
+@import "./layout/article-operation";
+@import "./layout/article_restaurants";
+@import "./layout/footer";
 
-.main-container {
-  max-width: 320px;
-  margin: auto;
-}
-
-.header {
-  text-align: center;
-}
-
-.header_logo-container {
-  width:100%;
-  height:50px;
-  background-color: $bg-white;
-  filter:drop-shadow(0 1px 2px rgb(170, 170, 170));
-  @include flex(flex,center,null,null);
-}
-.header_logo {
-  height:25px;
-  object-fit: contain;
-}
-.location {
-  background-color: $bg-grey;
-  height:50px;
-  font-size: 14px;
-  font-weight: 900;
-  @include flex(flex,center,center,row);
-  color:$color-dark-grey;
-}
-.location_icon {
-  padding-right: 10px;
-}
-.location_text {
-  line-height: 50px;
-}
-  
-
-// **header**
-
-
-
-
-
-// **header location**
-
-
-
-
-// **nav section**
-
-.nav {
-  padding-bottom: 50px;
-  background-color: $bg-light-grey;
-}
-.nav_heading {
-  font-weight: 700;
-  margin-top:0;
-  padding-top:15px;
-}
-.nav_button{
-  margin:auto;
-  background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
-  border-radius: 20px;
-  width:200px;
-  height:45px;
-  filter: drop-shadow(0px 4px 5px #b1b1b1);
-}
-
-.nav_text {
-  color:rgb(146, 146, 146);
-  font-size: 1em;
-  font-weight: 300;
-}
-
-.nav_button a {
-  color:rgb(255, 255, 255);
-  line-height: 45px;
-}
-
-// **operation**
-
-.operation {
-  background-color: $bg-white;
-  padding-top:25px;
-  padding-bottom: 15px;
-}
-
-.operation_cards {
-  @include flex(flex,null,null,column);
-  gap:20px;
-  padding-bottom: 50px;
-}
-.operation_card {
-  margin:auto;
-  background-color: $bg-light-grey;
-  border-radius: 20px;
-  width:258px;
-  height:65px;
-  filter: drop-shadow(0px 4px 4px #dddddd);
-  @include flex(flex,null,center,row);
-  padding-left: 30px;
-}
-.operation_icon {
-  padding-right: 19px;
-  color:$icon-color;
-  font-size: 1.2em;
-  margin-bottom: 5px;
-}
-
-.operation_dot {
-  border-radius: 10px;
-  width:20px;
-  height: 20px;
-  background-color:$dot-color;
-  color:white;
-  position:absolute;
-  left:-10px;
-  text-align: center;
-  line-height: 20px;
-  font-size:0.8em;
- }
-
-// **restaurants**
-
-.restaurants {
-  background-color: $bg-light-grey;
-  padding-top:25px;
-  color:black;
-
-  .restaurants_cards {
-    padding-bottom: 50px;
-    @include flex(flex,center,null,column);
-    width: 90%;
-    margin: auto;
-    gap:20px;
-  }
-  .restaurants_card {
-    background-color:$bg-white;
-    border-radius: 20px;
-    position: relative;
-  }
-  .card-thumb {
-    border-radius: 15px 15px 0 0;
-    width:100%;
-    height: 145px;
-    object-fit:cover;
-  }
-  .card-content {
-    @include flex(flex,null,null,row);
-  }
-  .card-text {
-    flex-direction: column;
-    width:80%;
-    padding-left:15px;
-    gap:2px;
-  }
-  .section-title::first-letter{
-    margin-bottom: 0px;
-    padding-top:15px;
-    text-transform: capitalize;
-  }
-  .card-paragraph {
-    margin-top:0;
-    font-weight: 300;
-  }
-  .heart-icon-border {
-    font-size: 1.35em;
-    color:rgb(0, 0, 0);
-    width:20%;
-    @include padding(20px,auto,auto,20px);
-  }
-  
-  .heart-icon-solid {
-    position:absolute;
-    font-size: 1em;
-    color:rgb(255, 255, 255);
-    display:none;
-  }
-  
-  .label-new {
-    background-color: #99E2D0;
-    width:69px;
-    height:25px;
-    border-radius: 2px;
-    position: absolute;
-    top:10px;
-    right: 10px;
-    color:#008766;
-    font-size: 0.75em;
-    font-weight: 700;
-    display:table-cell;
-    text-align: center;
-    line-height:26px;
-    filter: drop-shadow(0px 4px 4px #646464);
-  }
-}
-
-
-
-
-
-
-
-
-// **footer**
-
-footer {
-  @include padding(auto,auto,24px,20px);
-  background-color: $bg-dark-grey;
-    a {
-      color: white;
-      font-style:normal;
-    }
-}
-
-.footer_heading {
-  font-size: 1.1em;
-  margin:0;
-  @include padding(15px,auto,10px,0);
-  color: #ffffff;
-  font-weight: 100;
-}
-.links-container {
-  @include flex(flex,null,null,column);
-  gap:10px;
-}
-
-.footer_links p {
-  margin:0;
-  font-weight: 400;
-}
-
-.footer_links {
-  font-size: 1em;
-  font-weight: 400;
-  display:flex;
-  flex-direction: row;
-
-}
-.footer_icons {
-  font-size: 0.7em;
-  line-height: 20px;
-  width: 21px;
-  height:21px;
-}
-
-
-// **MEDIA QUERIES**
-
-// **medium tablets devices**
 
 @media screen and (min-width:767.98px) {
 
   .main-container {
-    max-width:768px;
+   
     
   }
 
