--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -11,3 +11,11 @@
     padding-bottom: $pb;
     padding-left: $pl;
 }
+
+@mixin media-q($size) {
+  @if $size == medium-devices {
+    @media (min-width: 768px) { @content; } 
+  } @else if $size == desktop {
+    @media (min-width:1024px) { @content;}
+  }
+}
