--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,7 +5,7 @@ body {
         color: white;
     }
     
-    .main-container {
-        max-width: 320px;
-      }
+.main-container {
+    min-width: 320px;
+}
 }
