--- a/sass/layout/_article-operation.scss
+++ b/sass/layout/_article-operation.scss
@@ -1,28 +1,51 @@
 .operation {
+    margin:0;
     background-color: $bg-white;
     padding-top:25px;
     padding-bottom: 15px;
-    .operation_cards {
+    @include media-q(desktop){
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+    &__heading {
+      padding-left: 20px;
+      @include media-q(desktop) {
+        margin-left: 0px;
+       }
+    }
+    &__cards {
         @include flex(flex,null,null,column);
         gap:20px;
         padding-bottom: 50px;
+        @include media-q(desktop){
+          @include flex(flex,null,null,row);
+          gap:20px;
+        }
       }
-    .operation_card {
+    &__card {
         margin:auto;
         background-color: $bg-light-grey;
         border-radius: 20px;
-        width:240px;
+        width: 255px;
         height:65px;
         filter: drop-shadow(0px 4px 4px #dddddd);
+        white-space: nowrap;
         @include flex(flex,null,center,row);
         padding-left: 30px;
-    }
-    .operation_icon {
+        @include media-q(desktop) {
+          height:53px;
+          width: 218px;
+        }
+      }
+    &__icon {
         padding-right: 19px;
         color:$icon-color;
         margin-bottom: 5px;
+        @include media-q(desktop){
+          padding-right: 15px;
+        }
       }
-    .operation_dot {
+    &__dot {
         border-radius: 10px;
         width:20px;
         height: 20px;
