--- a/sass/layout/_article_restaurants.scss
+++ b/sass/layout/_article_restaurants.scss
@@ -2,67 +2,90 @@
     background-color: $bg-light-grey;
     padding-top:25px;
     color:black;
-  
-    .restaurants_cards {
+    width: 100%;
+    @include media-q(desktop){
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+    &__heading {
+      margin-left: 20px;
+      @include media-q(desktop) {
+        margin-left: 0px;
+       }
+    }
+    &__cards {
       padding-bottom: 50px;
-      @include flex(flex,center,null,column);
-      width: 90%;
+      @include flex(flex,null,center,column);
       margin: auto;
       gap:20px;
+      @include media-q(desktop) {
+        flex-direction:row;
+        flex-wrap: wrap;
+        }
       }
-    .restaurants_card {
+    &__card-heading {
+      margin:0;
+      padding-top: 10px;
+    }
+    &__card {
       background-color:$bg-white;
       border-radius: 20px;
       position: relative;
+      width: 288px;
+      @include media-q(desktop) {
+        width:400px;
+        }
     }
-    .card-thumb {
+    &__card-thumb {
       border-radius: 15px 15px 0 0;
       width: 100%;
       height: 145px;
       object-fit:cover;
     }
-    .card-content {
+    &__card-content {
       @include flex(flex,null,null,row);
     }
-    .card-text {
+    &__card-text {
       flex-direction: column;
       width:80%;
       padding-left:15px;
       gap:2px;
     }
-    .section-title::first-letter{
+    &__section-title::first-letter{
       margin-bottom: 0px;
       padding-top:15px;
     }
-    .card-paragraph {
+    &__card-paragraph {
       margin-top:0;
+      @include media-q(desktop) {
+        margin-bottom: 10px;
+        }
     } 
-    .heart-icon-solid {
+    &__heart-icon-solid {
       z-index:1;
       position: absolute;
       right:10px;
       color:rgb(164, 18, 18);
     }
-    .heart-icon-border {
+    &__heart-icon-border {
       position: absolute;
       right:10px;
       color:rgb(0, 0, 0);
     }    
+    &__label-new {
+      background-color: #99E2D0;
+      width:69px;
+      height:25px;
+      border-radius: 2px;
+      position: absolute;
+      top:10px;
+      right: 10px;
+      color:#008766;
+      display:table-cell;
+      text-align: center;
+      line-height:26px;
+      filter: drop-shadow(0px 4px 4px #646464);
+    }
   }
   
 
-
-  .label-new {
-    background-color: #99E2D0;
-    width:69px;
-    height:25px;
-    border-radius: 2px;
-    position: absolute;
-    top:10px;
-    right: 10px;
-    color:#008766;
-    display:table-cell;
-    text-align: center;
-    line-height:26px;
-    filter: drop-shadow(0px 4px 4px #646464);
-  }
