--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
     text-align: center;
 
-    .header_logo-container {
+    &__logo-container {
         width:100%;
         height:50px;
         background-color: $bg-white;
@@ -9,55 +9,64 @@
         @include flex(flex,center,null,null);
         position: relative;
       }
-    .header_logo {
+    &__logo {
         height:25px;
         object-fit: contain;
         position:absolute;
         bottom:10px;
       }
-  }
-
-.location {
-  background-color: $bg-grey;
-  height:50px;
-  @include flex(flex,center,center,row);
-  color:$typo-tertry-color;
-
-  .location_icon {
-      padding-right: 10px;
-    }
-    .location_text {
-    line-height: 50px;
-    }
-
-}
- 
-
-
-.nav {
-  padding-bottom: 50px;
-  background-color: $bg-light-grey;
-  
-  .nav_heading {
-      margin-top:0;
-      padding-top:15px;
-    }
-    .nav_button{
+    &__location {
+        background-color: $bg-grey;
+        height:50px;
+        @include flex(flex,center,center,row);
+        color:$typo-tertry-color;
+      }
+    &__location-icon {
+        padding-right: 10px;
+      }
+    &__location-text {
+      line-height: 50px;
+      }
+    &__nav {
+      padding-bottom: 50px;
+      background-color:$bg-light-grey;
+      @include media-q (desktop) {
+        padding-bottom:30px;
+      }
+      }
+    &__nav-heading {
+        margin-top:0;
+        padding-top:15px;
+        & br {
+          @include media-q (desktop) 
+            { display:none;}
+          }
+        }
+    &__nav-button{
       margin:auto;
       background: linear-gradient(0deg, $primary-color  0%, $secondary-color 100%);
       border-radius: 20px;
       width:200px;
       height:45px;
+      @include flex(flex,center,center,null);
       filter: drop-shadow(0px 4px 5px #b1b1b1);
-    }
-    .nav_text {
+      @include media-q (desktop) {
+        height: 39px;
+      }
+      }
+    &__nav-text {
       color:rgb(146, 146, 146);
+      & br {
+        @include media-q (desktop)
+        {display: none;}
+      }
+      }
+  }
 
-    }
-    .nav_button a {
-      line-height: 45px;
-    }
-}
+
+
+ 
+  
 
 
   
