--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,30 +1,11 @@
 
-@import "./base/typography";
-@import "./utils/variables";
-@import "./utils/mixins";
-@import "./layout/header";
-@import "./base/base";
-@import "./layout/article-operation";
-@import "./layout/article_restaurants";
-@import "./layout/footer";
+@import "base/typography";
+@import "utils/variables";
+@import "utils/mixins";
+@import "layout/header";
+@import "base/base";
+@import "layout/article-operation";
+@import "layout/article_restaurants";
+@import "layout/footer";
 
 
-@media screen and (min-width:767.98px) {
-
-  .main-container {
-   
-    
-  }
-
-}
-// **desktop devices**
-
-@media screen and (min-width:1023.98px) {
-
-  .main-container {
-    max-width:1024px;
-    
-  }
-
-
-}
