--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,11 +1,16 @@
 body {
     margin:0;
+
     a {
         text-decoration: none;
         color: white;
-    }
-    
+    }   
 .main-container {
     min-width: 320px;
+    max-width: 1024px;
+    @media (min-width:1024px){
+        margin: auto;
+    } 
+
 }
 }
