--- a/sass/layout/_article-operation.scss
+++ b/sass/layout/_article-operation.scss
@@ -1,14 +1,16 @@
 .operation {
     margin:0;
-    background-color: $bg-white;
     padding-top:25px;
     padding-bottom: 15px;
-    @include media-q(desktop){
-      padding-left: 100px;
-      padding-right: 100px;
+    background-color: $bg-white;
+    &__container {
+      width:90%;
+      margin: auto;
+      @include media-q(desktop) {
+        width:80%;
+      }
     }
     &__heading {
-      padding-left: 20px;
       @include media-q(desktop) {
         margin-left: 0px;
        }
@@ -17,32 +19,40 @@
         @include flex(flex,null,null,column);
         gap:20px;
         padding-bottom: 50px;
+        @include media-q(medium-devices) {
+          @include flex(flex,null,null,row);
+          height:53px; 
+        }
         @include media-q(desktop){
           @include flex(flex,null,null,row);
           gap:20px;
         }
       }
-    &__card {
-        margin:auto;
+      &__card {
         background-color: $bg-light-grey;
         border-radius: 20px;
-        width: 255px;
+        width: 85%;
         height:65px;
         filter: drop-shadow(0px 4px 4px #dddddd);
         white-space: nowrap;
-        @include flex(flex,null,center,row);
         padding-left: 30px;
+        @include flex(flex,null,center,row);
+        @include media-q(medium-devices) {
+          height:53px;
+          width: 190px;
+        }
         @include media-q(desktop) {
           height:53px;
           width: 218px;
         }
       }
     &__icon {
-        padding-right: 19px;
+        // padding-right: 19px;
         color:$icon-color;
-        margin-bottom: 5px;
-        @include media-q(desktop){
-          padding-right: 15px;
+        width:30px;
+        margin-bottom: 2px;
+        @include media-q(medium-devices){
+          margin-bottom: 0;
         }
       }
     &__dot {
@@ -55,5 +65,10 @@
         left:-10px;
         text-align: center;
         line-height: 20px;
+        @include media-q(medium-devices){        
+          line-height: 16px;
+          width:17px;
+          height: 17px;
+        }
         }
   }
