--- a/sass/layout/_article_restaurants.scss
+++ b/sass/layout/_article_restaurants.scss
@@ -2,23 +2,19 @@
     background-color: $bg-light-grey;
     padding-top:25px;
     color:black;
-    width: 100%;
-    @include media-q(desktop){
-      padding-left: 100px;
-      padding-right: 100px;
-    }
-    &__heading {
-      margin-left: 20px;
-      @include media-q(desktop) {
-        margin-left: 0px;
-       }
+    &__container {
+      width:90%;
+      margin: auto;
+      @include media-q(desktop){
+        width:80%;
+      }
     }
     &__cards {
       padding-bottom: 50px;
-      @include flex(flex,null,center,column);
+      @include flex(flex,center,center,column);
       margin: auto;
-      gap:20px;
-      @include media-q(desktop) {
+      gap:19px;
+      @include media-q(medium-devices) {
         flex-direction:row;
         flex-wrap: wrap;
         }
@@ -31,7 +27,10 @@
       background-color:$bg-white;
       border-radius: 20px;
       position: relative;
-      width: 288px;
+      width: 100%;
+      @include media-q(medium-devices) {
+        width: 288px;
+        }
       @include media-q(desktop) {
         width:400px;
         }
@@ -44,6 +43,7 @@
     }
     &__card-content {
       @include flex(flex,null,null,row);
+      position: relative;
     }
     &__card-text {
       flex-direction: column;
@@ -61,26 +61,25 @@
         margin-bottom: 10px;
         }
     } 
-    &__heart-icon-solid {
+    &__heart-icon-border, &__heart-icon-solid {
       z-index:1;
       position: absolute;
       right:10px;
-      color:rgb(164, 18, 18);
-    }
-    &__heart-icon-border {
-      position: absolute;
-      right:10px;
+      top:10px;
       color:rgb(0, 0, 0);
+    }
+    &__heart-icon-solid {
+      color:rgb(255, 0, 0);
     }    
     &__label-new {
-      background-color: #99E2D0;
+      background-color:$tertiary-color;
       width:69px;
       height:25px;
       border-radius: 2px;
       position: absolute;
       top:10px;
       right: 10px;
-      color:#008766;
+      color:$typo-quatry-color;
       display:table-cell;
       text-align: center;
       line-height:26px;
