--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,7 +30,7 @@
     &__nav {
       padding-bottom: 50px;
       background-color:$bg-light-grey;
-      @include media-q (desktop) {
+      @include media-q (medium-devices) {
         padding-bottom:30px;
       }
       }
@@ -38,13 +38,13 @@
         margin-top:0;
         padding-top:15px;
         & br {
-          @include media-q (desktop) 
+          @include media-q (medium-devices) 
             { display:none;}
           }
         }
     &__nav-button{
       margin:auto;
-      background: linear-gradient(0deg, $primary-color  0%, $secondary-color 100%);
+      background: $gradient;
       border-radius: 20px;
       width:200px;
       height:45px;
@@ -57,7 +57,7 @@
     &__nav-text {
       color:rgb(146, 146, 146);
       & br {
-        @include media-q (desktop)
+        @include media-q (medium-devices)
         {display: none;}
       }
       }
