--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
     display: flex;
     flex-direction: column;
-    @include padding(auto,auto,24px,20px);
-    background-color: $bg-dark-grey;
+    @include padding(0,0,24px,20px);
+    background-color: map-get($bg-color,bg-dark-grey);
     @include media-q(medium-devices){
       align-content: flex-end;
       @include flex(flex,flex-start,center,row-reverse);
@@ -12,7 +12,7 @@
     }
     &__heading {
       margin:0;
-      @include padding(15px,auto,10px,0);
+      @include padding(15px,0,10px,0);
       color: #ffffff;
       @include media-q(medium-devices) {
         margin-left: 10px;
