--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,12 @@ $bg-color: (
     bg-grey :#EAEAEA,
     bg-dark-grey: #353535
 );
+    // **shadow-color**
+
+    $sh-white: #ccc;
+    $sh-light-grey: #c2c2c2;
+    $sh-grey : #b8b8b8;
+
 
     // **components colors**
 
