--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,7 +5,7 @@
         width:100%;
         height:50px;
         background-color: map-get($bg-color,bg-white);
-        @include shadow-darkener(bg-white);
+        filter: drop-shadow(0px 4px 4px $sh-white);
         @include flex(flex,center,null,null);
         position: relative;
       }
@@ -29,7 +29,7 @@
       }
     &__nav {
       padding-bottom: 50px;
-      background-color:map-get($bg-color,bg-light-grey);
+      background-color: map-get($bg-color,bg-light-grey);
       @include media-q (medium-devices) {
         padding-bottom:30px;
       }
@@ -49,14 +49,31 @@
       height:45px;
       background: $gradient;
       @include flex(flex,center,center,null);
-      @include shadow-darkener(bg-grey);
+      filter: drop-shadow(0px 4px 4px $sh-light-grey);
       &:hover {
-        @include shadow-darkener(bg-grey);
+        filter: drop-shadow(0px 4px 4px darken($sh-light-grey, 20%));
+        background: linear-gradient(0deg, lighten($primary-color,5%)  0%, lighten($secondary-color,5%) 100%);
       }
       @include media-q (desktop) {
         height: 39px;
       }
       }
+    // &__nav-button{
+    //   margin:auto;
+    //   border-radius: 20px;
+    //   width:200px;
+    //   height:45px;
+    //   background: $gradient;
+    //   @include flex(flex,center,center,null);
+    //   @include shadow-darkener(map-get($bg-color,bg-white));
+    //   &:hover {
+    //     filter: drop-shadow(0px 4px 4px darken($sh-light-grey, 20%));
+    //     background: linear-gradient(0deg, lighten($primary-color,5%)  0%, lighten($secondary-color,5%) 100%);
+    //   }
+    //   @include media-q (desktop) {
+    //     height: 39px;
+    //   }
+    //   }
     &__nav-text {
       color:rgb(146, 146, 146);
       & br {
