--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,12 @@
 @import "base/typography";
 @import "utils/variables";
 @import "utils/mixins";
+@import "components/buttons";
 @import "layout/header";
 @import "base/base";
 @import "layout/article-operation";
 @import "layout/article_restaurants";
 @import "layout/footer";
+@import "layout/page-1";
 
 
