--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,7 +21,7 @@ $icon-color:#999999;
 
 $color-dark-grey: rgb(86, 86, 86);
 
-// **text colors **
+    // **text colors **
 
 $typo-main-color: black;
 $typo-secdry-color: white;
@@ -36,6 +36,18 @@ $gradient-prim-color: #E872DA;
 $gradient-sec-color: #A55DDC;
 $gradient:linear-gradient(0deg, $primary-color  0%, $secondary-color 100%);
 
-// ** shadows colors**
+    // ** shadows colors**
  $shadow: rgb(214, 214, 214);
+
+     // **  categories**
+
+// $butt-categories:(menu,header);
+
+
+
+// $card-categories:(operation, retaurants);
+
+
+
+
 
