--- a/sass/layout/_article-operation.scss
+++ b/sass/layout/_article-operation.scss
@@ -3,6 +3,7 @@
     padding-top:25px;
     padding-bottom: 15px;
     background-color: map-get($bg-color,bg-white);
+    @include card(card);
     &__container {
       width:90%;
       margin: auto;
@@ -28,31 +29,6 @@
           gap:20px;
         }
       }
-    &__card {
-      background-color: map-get($bg-color,bg-light-grey);
-      border-radius: 20px;
-      width: 85%;
-      height:65px;
-      white-space: nowrap;
-      padding-left: 30px;
-      filter: drop-shadow(0px 4px 4px $sh-white);
-      @include flex(flex,null,center,row);
-      @include media-q(medium-devices) {
-        height:53px;
-        width: 190px;
-      }
-      @include media-q(desktop) {
-        height:53px;
-        width: 218px;
-      }
-      &:hover {
-        background-color: lighten(map-get($bg-color,bg-light-grey),0.5%);
-        filter: drop-shadow(0px 4px 4px darken($sh-light-grey, 20%) );
-        & .operation__icon {
-          color:$primary-color;
-        }
-      }
-    }
     &__card-title, &__icon {
       color:black;
       &:hover {
